# starter-tauri-next-typescript

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: index.tsx  posts.tsx
