workspace = { }

[package]
name = "starter-app"
version = "1.0.0"
description = "Starter App"
license = ""
repository = ""
default-run = "starter-app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "starter-app"
path = "src/main.rs"
